--- a/ImageScanner/Base.lproj/Main.storyboard
+++ b/ImageScanner/Base.lproj/Main.storyboard
@@ -91,14 +91,14 @@
                                 <rect key="frame" x="20" y="102.5" width="374" height="358.5"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PACKAGE NUMBER:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qez-Gx-aaI">
-                                <rect key="frame" x="20" y="84" width="374" height="31.5"/>
-                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PACKAGE NUMBER:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qez-Gx-aaI">
+                                <rect key="frame" x="20" y="84" width="374" height="23.5"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R0s-Gv-Qea">
-                                <rect key="frame" x="20" y="583" width="374" height="200"/>
+                                <rect key="frame" x="20" y="582" width="374" height="200"/>
                                 <color key="backgroundColor" red="0.18663803840000001" green="0.83786784000000003" blue="0.72669224460000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="OYf-zu-Jyz"/>
@@ -154,20 +154,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S9n-Tz-Now">
-                                <rect key="frame" x="20" y="552" width="41" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="551" width="43" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATASET" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r63-tQ-Nag">
-                                <rect key="frame" x="171" y="552" width="72" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y46-iF-uGY">
-                                <rect key="frame" x="347" y="552" width="47" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="344" y="551" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -176,22 +170,19 @@
                         <constraints>
                             <constraint firstItem="R0s-Gv-Qea" firstAttribute="centerX" secondItem="Qyb-Gn-GeD" secondAttribute="centerX" id="5dT-QR-HOR"/>
                             <constraint firstItem="Qyb-Gn-GeD" firstAttribute="height" secondItem="6Xu-Xc-lsj" secondAttribute="height" multiplier="0.4" id="DVh-eA-bs3"/>
-                            <constraint firstItem="r63-tQ-Nag" firstAttribute="top" secondItem="W5z-72-feb" secondAttribute="bottom" constant="50" id="H7d-GM-uxe"/>
                             <constraint firstItem="W5z-72-feb" firstAttribute="leading" secondItem="exZ-g3-TLe" secondAttribute="leading" constant="72.5" id="I7I-3N-GW0"/>
                             <constraint firstItem="R0s-Gv-Qea" firstAttribute="top" secondItem="S9n-Tz-Now" secondAttribute="bottom" constant="10" id="IWQ-0s-9yH"/>
-                            <constraint firstItem="r63-tQ-Nag" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="S9n-Tz-Now" secondAttribute="trailing" constant="8" symbolic="YES" id="Jvo-Dy-5Yh"/>
                             <constraint firstItem="qez-Gx-aaI" firstAttribute="top" secondItem="exZ-g3-TLe" secondAttribute="top" constant="40" id="KVE-oA-c1m"/>
-                            <constraint firstItem="r95-tN-GsU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="W5z-72-feb" secondAttribute="trailing" symbolic="YES" id="Q6Z-9J-IcT"/>
+                            <constraint firstItem="r95-tN-GsU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="W5z-72-feb" secondAttribute="trailing" constant="8" symbolic="YES" id="Q6Z-9J-IcT"/>
                             <constraint firstItem="exZ-g3-TLe" firstAttribute="trailing" secondItem="Qyb-Gn-GeD" secondAttribute="trailing" constant="20" id="Qys-UE-9me"/>
                             <constraint firstItem="exZ-g3-TLe" firstAttribute="trailing" secondItem="r95-tN-GsU" secondAttribute="trailing" constant="20" id="U5F-Ds-4UJ"/>
-                            <constraint firstItem="R0s-Gv-Qea" firstAttribute="top" secondItem="r63-tQ-Nag" secondAttribute="bottom" constant="10" id="Vuu-uZ-jlg"/>
-                            <constraint firstItem="Y46-iF-uGY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="r63-tQ-Nag" secondAttribute="trailing" constant="8" symbolic="YES" id="dOg-CP-z7h"/>
                             <constraint firstItem="S9n-Tz-Now" firstAttribute="leading" secondItem="exZ-g3-TLe" secondAttribute="leading" constant="20" id="db5-EG-aeP"/>
                             <constraint firstItem="R0s-Gv-Qea" firstAttribute="width" secondItem="Qyb-Gn-GeD" secondAttribute="width" id="eUZ-KA-FjC"/>
                             <constraint firstItem="Qyb-Gn-GeD" firstAttribute="leading" secondItem="exZ-g3-TLe" secondAttribute="leading" constant="20" id="eod-Qi-W0Y"/>
-                            <constraint firstItem="r63-tQ-Nag" firstAttribute="centerX" secondItem="exZ-g3-TLe" secondAttribute="centerX" id="f4Z-AG-KfT"/>
                             <constraint firstItem="Qyb-Gn-GeD" firstAttribute="centerY" secondItem="exZ-g3-TLe" secondAttribute="centerY" multiplier="0.6" constant="10" id="hC2-Ed-WVv"/>
                             <constraint firstItem="r95-tN-GsU" firstAttribute="top" secondItem="Qyb-Gn-GeD" secondAttribute="bottom" constant="10" id="kZc-ZK-UKM"/>
+                            <constraint firstItem="R0s-Gv-Qea" firstAttribute="top" secondItem="W5z-72-feb" secondAttribute="bottom" constant="80" id="oo5-Uc-6Rn"/>
+                            <constraint firstItem="Y46-iF-uGY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="S9n-Tz-Now" secondAttribute="trailing" constant="8" symbolic="YES" id="qe7-hZ-Buz"/>
                             <constraint firstItem="R0s-Gv-Qea" firstAttribute="top" secondItem="Y46-iF-uGY" secondAttribute="bottom" constant="10" id="qfr-Zu-qfu"/>
                             <constraint firstItem="W5z-72-feb" firstAttribute="top" secondItem="Qyb-Gn-GeD" secondAttribute="bottom" constant="12" id="rOp-vd-l6w"/>
                             <constraint firstItem="exZ-g3-TLe" firstAttribute="trailing" secondItem="qez-Gx-aaI" secondAttribute="trailing" constant="20" id="rtJ-cd-kMc"/>
@@ -209,7 +200,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lYb-fi-Xbt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1033.3333333333335" y="116.51785714285714"/>
+            <point key="canvasLocation" x="990" y="467"/>
         </scene>
         <!--Inventory-->
         <scene sceneID="FU5-HA-8VJ">
@@ -238,14 +229,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3K-as-bbx">
-                                                    <rect key="frame" x="20" y="11.5" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="20" y="10.5" width="42" height="22.5"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKy-ZW-n7o">
-                                                    <rect key="frame" x="352" y="11.5" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="352" y="10.5" width="42" height="22.5"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -312,6 +303,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="GYV-oo-YOW"/>
